<resources>
    <string name="app_name">Curator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="positive">Accept</string>
    <string name="negative">Decline</string>
    <string name="neutral">Cancel</string>
    <string name="saveAs">Save As…</string>
    <string name="export">Export</string>
    <string name="wallpaper">Set as wallpaper</string>
    <string name="EDIT">EDIT</string>
    <string name="ADD">ADD</string>
    <string name="editWith">Edit with…</string>
    <string name="selectAll">Select All</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="viewMeta">Show Meta Sidebar</string>
    <string name="lastUsedFolder">Last Used Folder</string>
    <string name="rename">Rename</string>
    <string name="format_prompt">Format</string>
    <string name="save">Save</string>
    <string name="save_success">Save successful</string>
    <string name="no_filemanager_installed">No file manager</string>
    <string name="contact">Contact</string>
    <string-array name="format_array">
        <item>Custom Name - Sequence</item>
        <item>Custom Name (x of y)</item>
        
    </string-array>
    <string name="Date">Date</string>
    <string name="Name">Name</string>
    <string name="settings">Settings</string>
    <string name="moveImages">Move Images</string>
    <string name="copyImages">Copy Images</string>
    <string name="chooseDestination">Choose Destination</string>
    <string name="choosefile">Choose File</string>
    <string name="import1">Import</string>
    <string name="renameImages">Rename Images</string>
    <string name="view">View</string>
    <string name="gallery">Gallery</string>
    <string name="viewer">Viewer</string>
    <string name="storage">Storage</string>
    <string name="firstImage">First Image</string>
    <string name="lastImage">Last Image</string>
    <string name="unlicensed">Unlicensed</string>
    <string name="match">Match</string>
    <string name="altitude">Altitude</string>
    <string name="aperture">Aperture</string>
    <string name="dimensions">Dimensions</string>
    <string name="driveMode">Drive Mode</string>
    <string name="expMode">Exp. Mode</string>
    <string name="expProgram">Exp. Program</string>
    <string name="exposure">Exposure</string>
    <string name="flash">Flash</string>
    <string name="focalLength">Focal Length</string>
    <string name="iso">ISO</string>
    <string name="latitude">Latitude</string>
    <string name="lens">Lens</string>
    <string name="longitude">Longitude</string>
    <string name="model">Model</string>
    <string name="whiteBalance">White Balance</string>
    <string name="metadata">Metadata</string>
    <string name="tutorial">Tutorial</string>
    <string name="saveDefaultConfirm">This dialog will no longer appear.</string>
    <string name="settingsReset">This can be reset in the settings.</string>
    <string name="resultImportSuccessful">Import successful.</string>
    <string name="resultImportFailed">Import failed.</string>
    <string name="resultWallpaperFailed">Failed to set wallpaper.</string>
    <string name="warningFileWrongFormat">File is not the correct format.</string>
    <string name="warningNoItemsSelected">No items selected.</string>
    <string name="warningImagesNotFound">Images not found.</string>
    <string name="warningNotEnoughSpace">Not enough space to import entire folder.</string>
    <string name="warningDeleteExceedsRecycle">Deleted file exceeds recycle bin size.  Delete permanently?  (Note: Size can be edited in settings)</string>
    <string name="warningDeleteDirect">Files will be deleted directly.</string>
    <string name="warningNoRecycleBin">Recycle bin does not exist. Files will be deleted directly.</string>
    <string name="warningGenericImagesOff">Generic images (ex: jpg) have been disabled in settings.</string>
    <string name="warningInvalidLabel">is an invalid label.  Labels can be customized in settings.</string>
    <string name="warningBlankWatermark">You tried to apply an empty watermark.  Please add text.</string>
    <string name="warningKitKat">Unfortunately your device is running Android 4.4+.  Google disabled writing to sdcards in this version.  There are two options to continue using sdcards:\n1:Use an external card reader.\n2:Root your device to fix it.\n\nWithout a fix you CANNOT edit, save or create metadata on sdcards.</string>
    <string name="warningWriteDisabled">You have selected a folder that has write access disabled.</string>
    <string name="warningWriteDisabledKitKat">You have selected a folder that has write access disabled.  Google disabled sdcard write access in Android 4.4.</string>
    <string name="warningAccessError">Access Error</string>
    <string name="warningNoImages">No new images found.  Your can clear the library (Help: Clear Library) to force reset.</string>
    <string name="prefTitleImageInterface">Automatically display interface</string>
    <string name="prefSummaryImageInterface">when image changes</string>
    <string name="prefTitleRecycleBin">Recycle Bin Size</string>
    <string name="prefSummaryRecycleBin">%s MB allocated to recycle bin.</string>
    <string name="prefTitleFilter">Exif Filter</string>
    <string name="prefTitleDeleteConfirmation">Delete Confirmation</string>
    <string name="prefSummaryDeleteConfirmation">If disabled deletes will not require confirmation even if they exceed recycle bin size.</string>
    <string name="prefTitleUseRecycleBin">Use Recycle Bin</string>
    <string name="prefSummaryUseRecycleBin">When disabled images will be directly deleted.</string>
    <string name="prefTitleShowXmpFiles">Show XMP Files</string>
    <string name="prefSummaryShowXmpFiles">This will show xmp sidecar files in the gallery.</string>
    <string name="prefTitleShowNativeFiles">Show Generic Images</string>
    <string name="prefSummaryShowNativeFiles">This will show jpg, gif, bmp, and png.</string>
    <string name="prefTitleShowUnknownFiles">Show Unhandled Files</string>
    <string name="prefSummaryShowUnknownFiles">This will show files that Curator does not process.</string>
    <string name="prefTitleResetSaveDefault">Clear Save Defaults</string>
    <string name="prefSummaryResetSaveDefault">Click to reset default save configuration.</string>
    <string name="prefTitleImportKeywords">Import Keywords</string>
    <string name="prefSummaryImportKeywords">Click to import a tab-delimited keyword file, such as those exported from Lightroom.</string>
    <string name="prefTitleUseLegacyViewer">Use Legacy Viewer</string>
    <string name="prefSummaryUseLegacyViewer">Check only if you experience issues with the default viewer.\nPlease email me if this is necessary.</string>
    <string name="prefTitleShowNav">Show Navigation</string>
    <string name="prefTitleMetaFontSize">Metadata Font Size</string>
    <string name="prefTitleShowMeta">Show Metadata</string>
    <string name="prefTitleShowHist">Show Histogram</string>
    <string name="prefTitleShowToolbar">Show Toolbar</string>
    <string name="prefSummaryLicenseError">There was an error communicating with Google servers.  Make sure you are connected and try again later.</string>
    <string name="prefSummaryLicenseModified">Application was modified!  Uninstall apps designed to crack licensing.  There are also reports of some ad blocking software making modifications.  You may need to reinstall afterwards.</string>
    <string name="prefSummaryLicense">All features are available.  Thank you for your support!</string>
    <string name="prefTitleManualLicense">Check License</string>
    <string name="prefSummaryManualLicense">Click to manually check the license.  Requires an internet connection.</string>
    <string name="prefTitleEnableWatermark">Enable Watermark</string>
    <string name="prefSummaryEnableWatermark">Enable to place watermark on exported photos.</string>
    <string name="prefTitleWatermarkText">Watermark Text</string>
    <string name="prefTitleWatermarkSize">Watermark Height</string>
    <string name="prefTitleWatermarkLocation">Location of Watermark</string>
    <string name="prefTitleWatermarkAlpha">Watermark Transparency</string>
    <string name="prefSummaryContact">Click to send me an email.</string>
    <string name="prefTitleLeftMargin">Left</string>
    <string name="prefTitleRightMargin">Right</string>
    <string name="prefTitleTopMargin">Top</string>
    <string name="prefTitleBottomMargin">Bottom</string>
    <string name="prefSummaryLeftMargin">Distance from left edge of image to left edge of watermark: %s.</string>
    <string name="prefSummaryRightMargin">Distance from right edge of image to right edge of watermark: %s</string>
    <string name="prefSummaryTopMargin">Distance from top edge of image to top edge of watermark: %s</string>
    <string name="prefSummaryBottomMargin">Distance from bottom edge of image to bottom edge of watermark: %s</string>
    <string name="prefTitleUseImmersive">Use Immersive</string>
    <string name="prefSummaryUseImmersive">Hide nav and status bars until swiped in.</string>
    <string name="prefTitleShareFormat">Share Format</string>
    <string name="prefTitleEditFormat">Edit Format</string>
    <string name="prefAutoSummary">%s</string>
    <string name="buypro">Click here to upgrade to Curator Pro to unlock features and improve speed!</string>
    <string name="automatic">Automatic</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="clearLibrary">Clear Library</string>
    <string name="cacheCleared">Gallery image cache cleared.</string>
    <string name="accessRecycle">Access Recycle Bin</string>
    <string name="recycleBin">Recycle Bin</string>
    <string name="restoreFile">Restore File</string>
    <string name="emptyRecycleBin">Empty Recycle Bin</string>
    <string name="saveJpg">Save Jpeg</string>
    <string name="share">Share</string>
    <string name="ratingRequest">If you enjoy using Curator please take a moment to rate it.\nThanks for your support!</string>
    <string name="cancel">Cancel</string>
    <string name="preparing">Preparing…</string>
    <string name="processingImages">Processing Images…</string>
    <string name="copyingImages">Copying Images…</string>
    <string name="writingMetadata">Writing Metadata…</string>
    <string name="importingImages">Importing Images…</string>
    <string name="savingImages">Saving Images…</string>
    <string name="exportingThumb">Exporting Thumbnails…</string>
    <string name="deletingFiles">Deleting Files…</string>
    <string name="recyclingFiles">Recycling Files…</string>
    <string name="restoringFiles">Restoring Files…</string>
    <string name="clear">Clear</string>
    <string name="reuse">Reuse</string>
    <string name="customKeywords">Custom Keywords</string>
    <string name="addKeyword">Add Keyword</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="excludedFolders">Excluded Folders</string>
    <string name="excludedSummary">Folders that are not scanned for images</string>
    <string name="excludedMessage">Tap to remove folders from the exclusion list</string>
    <string name="dialogWriteRequestTitle">Write Permission Guide</string>
    <string name="dialogWriteRequestMessage">The following screen will grant Curator write permission to the external SD card.  Choose the root directory 0000–0000 for full access.</string>
    <string name="welcomeTitle">Welcome to Curator!</string>
    <string name="watermark">Watermark ( Pro )</string>
    <string name="defaults">Defaults</string>
</resources>