<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/recycleBin" >
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="prefKeyUseRecycleBin"
            app:summary="@string/prefSummaryUseRecycleBin"
            app:title="@string/prefTitleUseRecycleBin" />
        <SeekBarPreference
            app:key="prefKeyRecycleBinSize"
            app:dependency="prefKeyUseRecycleBin"
            app:title="@string/prefTitleRecycleBin"
            app:defaultValue="50"
            android:max="500"
            app:showSeekBarValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/delete" >
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="prefKeyDeleteConfirmation"
            app:summary="@string/prefSummaryDeleteConfirmation"
            app:title="@string/prefTitleDeleteConfirmation" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/defaults">
        <Preference
            app:key="prefKeyResetSaveDefault"
            app:summary="@string/prefSummaryResetSaveDefault"
            app:title="@string/prefTitleResetSaveDefault" />
    </PreferenceCategory>

</PreferenceScreen>