<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="XMP" >
        <Preference
            app:key="prefKeyImportKeywords"
            app:summary="@string/prefSummaryImportKeywords"
            app:title="@string/prefTitleImportKeywords" />
        <EditTextPreference
            app:icon="@drawable/button_red"
            app:key="prefKeyXmpRed"
            app:defaultValue="Red"
            app:title="Red"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:icon="@drawable/button_blue"
            app:key="prefKeyXmpBlue"
            app:defaultValue="Blue"
            app:title="Blue"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:icon="@drawable/button_green"
            app:key="prefKeyXmpGreen"
            app:defaultValue="Green"
            app:title="Green"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:icon="@drawable/button_yellow"
            app:key="prefKeyXmpYellow"
            app:defaultValue="Yellow"
            app:title="Yellow"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:icon="@drawable/button_purple"
            app:key="prefKeyXmpPurple"
            app:defaultValue="Purple"
            app:title="Purple"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/prefTitleFilter" >
        <CheckBoxPreference
            app:key="prefKeyExifAperture"
            app:title="@string/aperture"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifAltitude"
            app:title="@string/altitude"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifDate"
            app:title="@string/Date"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifDimensions"
            app:title="@string/dimensions"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifDriveMode"
            app:title="@string/driveMode"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifExposure"
            app:title="@string/exposure"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifExposureMode"
            app:title="@string/expMode"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifExposureProgram"
            app:title="@string/expProgram"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifFocal"
            app:title="@string/focalLength"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifFlash"
            app:title="@string/flash"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifName"
            app:title="@string/Name"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifLatitude"
            app:title="@string/latitude"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifLens"
            app:title="@string/lens"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifLongitude"
            app:title="@string/longitude"
            app:defaultValue="false" />
        <CheckBoxPreference
            app:key="prefKeyExifModel"
            app:title="@string/model"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifIso"
            app:title="@string/iso"
            app:defaultValue="true" />
        <CheckBoxPreference
            app:key="prefKeyExifWhiteBalance"
            app:title="@string/whiteBalance"
            app:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>