<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        app:key="prefKeyEnableWatermark"
        app:defaultValue="false"
        app:title="@string/prefTitleEnableWatermark"
        app:summary="@string/prefSummaryEnableWatermark" />

    <PreferenceCategory app:title="@string/appearance"
        app:dependency="prefKeyEnableWatermark">
        <EditTextPreference
            app:key="prefKeyWatermarkText"
            app:title="@string/prefTitleWatermarkText"
            app:useSimpleSummaryProvider="true"/>
        <SeekBarPreference
            app:key="prefKeyWatermarkSize"
            app:title="@string/prefTitleWatermarkSize"
            app:defaultValue="150"
            android:max="600"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            app:key="prefKeyWatermarkAlpha"
            app:title="@string/prefTitleWatermarkAlpha"
            app:defaultValue="75"
            android:max="100"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location"
        app:dependency="prefKeyEnableWatermark">
        <ListPreference
            app:defaultValue="Center"
            app:key="prefKeyWatermarkLocation"
            app:title="@string/prefTitleWatermarkLocation"
            app:entries="@array/watermarkLocations"
            app:useSimpleSummaryProvider="true"
            app:entryValues="@array/watermarkLocationsValues" />
        <EditTextPreference
            app:key="prefKeyWatermarkTopMargin"
            app:title="@string/prefSummaryTopMargin"
            app:useSimpleSummaryProvider="true"
            android:inputType="number" />
        <EditTextPreference
            app:key="prefKeyWatermarkBottomMargin"
            app:title="@string/prefSummaryBottomMargin"
            app:useSimpleSummaryProvider="true"
            android:inputType="number" />
        <EditTextPreference
            app:key="prefKeyWatermarkLeftMargin"
            app:title="@string/prefSummaryLeftMargin"
            app:useSimpleSummaryProvider="true"
            android:inputType="number" />
        <EditTextPreference
            app:key="prefKeyWatermarkRightMargin"
            app:title="@string/prefSummaryRightMargin"
            app:useSimpleSummaryProvider="true"
            android:inputType="number" />
    </PreferenceCategory>
</PreferenceScreen>