<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:fragment="com.anthonymandra.curator.settings.MetaSettingsFragment"
        app:title="@string/metadata" />
    <Preference
        app:fragment="com.anthonymandra.curator.settings.StorageSettingsFragment"
        app:title="@string/storage" />
    <Preference
        app:fragment="com.anthonymandra.curator.settings.ShareSettingsFragment"
        app:title="@string/share" />
    <Preference
        app:fragment="com.anthonymandra.curator.settings.ViewSettingsFragment"
        app:title="@string/view" />
    <Preference
        app:fragment="com.anthonymandra.curator.settings.WatermarkSettingsFragment"
        app:title="@string/watermark" />

</PreferenceScreen>