<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/viewer" >
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="prefKeyUseImmersive"
            app:summary="@string/prefSummaryUseImmersive"
            app:title="@string/prefTitleUseImmersive" />
<!--        <CheckBoxPreference
            app:defaultValue="true"
            app:key="prefKeyShowImageInterface"
            app:summary="@string/prefSummaryImageInterface"
            app:title="@string/prefTitleImageInterface" />-->
        <ListPreference
            app:defaultValue="Medium"
            app:key="prefKeyMetaSize"
            app:title="@string/prefTitleMetaFontSize"
            app:entries="@array/metaSizeOptions"
            app:entryValues="@array/metaSizeValues"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:defaultValue="Automatic"
            app:key="prefKeyShowNav"
            app:title="@string/prefTitleShowNav"
            app:entries="@array/showOptions"
            app:entryValues="@array/showOptionsValues"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:defaultValue="Automatic"
            app:key="prefKeyShowMeta"
            app:title="@string/prefTitleShowMeta"
            app:entries="@array/showOptions"
            app:entryValues="@array/showOptionsValues"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:defaultValue="Automatic"
            app:key="prefKeyShowHist"
            app:title="@string/prefTitleShowHist"
            app:entries="@array/showOptions"
            app:entryValues="@array/showOptionsValues"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            app:defaultValue="Always"
            app:key="prefKeyShowToolbar"
            app:title="@string/prefTitleShowToolbar"
            app:entries="@array/showOptions"
            app:entryValues="@array/showOptionsValues"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>