<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/contextSelectAll"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:title="@string/selectAll"/>
    <item
        android:id="@+id/contextDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/toggleXmp"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_labels"
        app:showAsAction="always"
        android:title="@string/viewMeta"/>
    <item
        android:id="@+id/contextSaveJpg"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/saveJpg"/>
    <item
        android:id="@+id/contextCopy"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/copyImages"/>
    <item
        android:id="@+id/contextRename"
        android:icon="@drawable/ic_rename"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/rename"/>
    <item
        android:id="@+id/contextShare"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always"
        android:title="@string/shareWith"/>
    <item
        android:id="@+id/context_recycle"
        android:icon="@drawable/recycle"
        android:orderInCategory="12"
        app:showAsAction="ifRoom"
        android:title="@string/accessRecycle"/>
    <item
        android:id="@+id/contextBlockFolder"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:title="@string/excludeFolder"/>
</menu>