<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                tools:ignore="RtlHardcoded">

    <com.anthonymandra.widget.HistogramView
        android:id="@+id/histogramView1"
        android:alpha=".75"
        android:layout_alignLeft="@+id/tableLayoutMeta"
        android:layout_above="@+id/tableLayoutMeta"
        android:layout_width="wrap_content"
        android:background="@drawable/white_border_translucent_black"
        android:layout_height="?attr/histogramHeight" />

    <TableLayout
        android:id="@+id/tableLayoutMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/Transparent_Black">

        <TableRow
            android:id="@+id/rowName"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelName"
                style="@style/MetaLabel"
                android:text="@string/Name"/>

            <TextView
                android:id="@+id/textViewName"
                style="@style/MetaValue"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowDate"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelDate"
                style="@style/MetaLabel"                                                
                android:text="@string/Date" />

            <TextView
                android:id="@+id/textViewDate"
                style="@style/MetaValue"
                tools:text="Oct 18, 2007 1:44:32 PM" />
        </TableRow>

        <TableRow
            android:id="@+id/rowModel"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView06"
                style="@style/MetaLabel"                                                
                android:text="@string/model" />

            <TextView
                android:id="@+id/textViewModel"
                style="@style/MetaValue" />
        </TableRow>

        <TableRow
            android:id="@+id/rowLens"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelLens"
                style="@style/MetaLabel"                                                
                android:text="@string/lens" />

            <TextView
                android:id="@+id/textViewLens"
                style="@style/MetaValue" />
        </TableRow>

        <TableRow
            android:id="@+id/rowDriveMode"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelDriveMode"
                style="@style/MetaLabel"                                                
                android:text="@string/driveMode" />

            <TextView
                android:id="@+id/textViewDriveMode"
                style="@style/MetaValue" />
        </TableRow>

        <TableRow
            android:id="@+id/rowExposureMode"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelExposureMode"
                style="@style/MetaLabel"                                                
                android:text="@string/expMode" />

            <TextView
                android:id="@+id/textViewExposureMode"
                style="@style/MetaValue" />
        </TableRow>

        <TableRow
            android:id="@+id/rowExposureProgram"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelExposureProgram"
                style="@style/MetaLabel"                                                
                android:text="@string/expProgram" />

            <TextView
                android:id="@+id/textViewExposureProgram"
                style="@style/MetaValue"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowAperture"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView08"
                style="@style/MetaLabel"                                                
                android:text="@string/aperture" />

            <TextView
                android:id="@+id/textViewAperture"
                style="@style/MetaValue" />
        </TableRow>

        <TableRow
            android:id="@+id/rowExposure"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView10"
                style="@style/MetaLabel"                                                
                android:text="@string/exposure"/>

            <TextView
                android:id="@+id/textViewExposure"
                style="@style/MetaValue"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowFlash"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView12"
                style="@style/MetaLabel"                                                
                android:text="@string/flash"/>

            <TextView
                android:id="@+id/textViewFlash"
                style="@style/MetaValue"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/rowFocal"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView14"
                style="@style/MetaLabel"
                android:text="@string/focalLength"/>

            <TextView
                android:id="@+id/textViewFocal"
                style="@style/MetaValue" />
            
        </TableRow>

        <TableRow
            android:id="@+id/rowIso"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView16"
                style="@style/MetaLabel"
                android:text="@string/iso" />

            <TextView
                android:id="@+id/textViewIso"
                style="@style/MetaValue"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/rowWhiteBalance"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView18"
                style="@style/MetaLabel"
                android:text="@string/whiteBalance"/>

            <TextView
                android:id="@+id/textViewWhite"
                style="@style/MetaValue"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/rowDimensions"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/TextView20"
                style="@style/MetaLabel"
                android:text="@string/dimensions"/>

            <TextView
                android:id="@+id/textViewDimensions"
                style="@style/MetaValue"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/rowLatitude"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelLat"
                style="@style/MetaLabel"
                android:text="@string/latitude"/>

            <TextView
                android:id="@+id/textViewLat"
                style="@style/MetaValue" />
            
        </TableRow>

        <TableRow
            android:id="@+id/rowLongitude"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelLon"
                style="@style/MetaLabel"
                android:text="@string/longitude"/>

            <TextView
                android:id="@+id/textViewLon"
                style="@style/MetaValue"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/rowAltitude"
            style="@style/MetaRow" >

            <TextView
                android:id="@+id/labelAlt"
                style="@style/MetaLabel"
                android:text="@string/altitude" />

            <TextView
                android:id="@+id/textViewAlt"
                style="@style/MetaValue" />
            
        </TableRow>
    </TableLayout>

</RelativeLayout>